[package]
name = "vulkan-test"
version = "0.1.0"
authors = ["Max Oomen <max@traverseresearch.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.19.5"
image = "0.10.4"
gpu-allocator = { path = "../.." }
ash = "0.31"