[package]
name = "vulkan-visualization"
version = "0.1.0"
authors = ["Traverse Research <info@traverseresearch.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpu-allocator = { path = "../..", features = ["visualizer"] }
ash = "0.31"
ash-window = "0.5"
winit = "0.23"
